@@ -27,6 +27,8 @@ Revision history for Perl extension PPI
 	  string when attribute has no parameters (GitHub #116) (MOREGAN)
 	- Unit tests for PPI::Token::Attribute (GitHub #115) (MOREGAN)
 	- Unit tests for PPI::Token::Symbol (GitHub #148) (MOREGAN)
+	- Fix PPI::Token::Symbol->canonical with "'" following the
+	  sigil (GitHub #159) (MOREGAN)
 
 1.220 Tue 11 Nov 2014
 	Summary:
